# bitcoin-discourse-pipeline

./: .gitignore  Makefile  README.md  experiments.ipynb  main.py  pyproject.toml  read_reddit.py
common/: db.py
customtypes/: queryresult.py
migrations/: 1_create_bronze_posts.sql  1_create_raw_tables.sql  2_create_silver_posts_comments.sql
models/: bronze.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/ws-84cbb613cf57413d/: payload_index.json
qdrant_storage/collections/ws-84cbb613cf57413d/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/ws-84cbb613cf57413d/0/segments/71392353-707c-404d-a484-b6e172bf8f1a/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/ws-84cbb613cf57413d/0/segments/71392353-707c-404d-a484-b6e172bf8f1a/payload_index/: 000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  MANIFEST-000005  config.json
qdrant_storage/collections/ws-84cbb613cf57413d/0/segments/921606ec-d7d3-4956-91db-a7c5671e2f5b/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/ws-84cbb613cf57413d/0/segments/921606ec-d7d3-4956-91db-a7c5671e2f5b/payload_index/: 000041.sst  000734.sst  000737.sst  000741.sst  000742.sst  000747.sst  000748.sst  000752.sst  000754.sst  000755.sst  000756.sst  000758.sst  IDENTITY  LOG  MANIFEST-000005  config.json
steps/: clean_reddit_data.py  read_reddit.py  reddit_bronze.py  reddit_silver.py
utils/: constants.py  logging_init.py
